<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.phoneshop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.capstone.phoneshop.ui.category.CategoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_search_bar"
        android:name="com.capstone.phoneshop.ui.searchbar.SearchBarFragment"
        android:label="@string/title_search_bar"
        tools:layout="@layout/fragment_search_bar" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.capstone.phoneshop.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_user_page"
        android:name="com.capstone.phoneshop.ui.userpage.UserPageFragment"
        android:label="@string/title_user_page"
        tools:layout="@layout/fragment_user_page" />


</navigation>