<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Activities.AddressInformationActivity">

    <Button
        style="@style/BigButton"
        android:id="@+id/saveAddress"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/saveAddress"
        android:layout_marginBottom="10dp"/>

    <Button
        style="@style/BigButton"
        android:id="@+id/confirmAddress"
        android:visibility="gone"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="Chọn địa chỉ này"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:textSize="20sp"
            android:inputType="textCapWords"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumber"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/textCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/textDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wards"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/textWards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="textCapSentences"
            android:hint="@string/address_detail"
            android:paddingBottom="10dp"/>
    </LinearLayout>



</RelativeLayout>