<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorBackground"
    tools:context=".Activities.UserDetailActivity">

    <Button
        android:id="@+id/buttonSaveUserInfomation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/colorAccent"
        android:layout_marginBottom="10dp"
        android:textColor="@color/cardview_light_background"
        android:text="@string/save_button_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-2dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/personal"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Họ tên"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:text="Trần Quang Khải"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:text="chenguangbankai@gmail.com"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ngày sinh"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="21/05/1998"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/sexGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/maleRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:layout_marginTop="10sp">

            <CheckBox
                android:id="@+id/changePasswordCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Đổi mật khẩu"
                android:background="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/changePasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <com.capstone.phoneshop.ui.CustomEditText
                android:id="@+id/textOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/unhide"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:tag="hide"/>

            <com.capstone.phoneshop.ui.CustomEditText
                android:id="@+id/textNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/unhide"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:tag="hide"/>

            <com.capstone.phoneshop.ui.CustomEditText
                android:id="@+id/textReplacePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/unhide"
                android:hint="@string/replace_new_password"
                android:inputType="textPassword"
                android:tag="hide"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>